# lattice

./: .gitignore  Cargo.toml  README.md  lattice_product_spec.md  package-lock.json  package.json
crates/lattice-content/: Cargo.toml
crates/lattice-content/src/: generate.rs  lesson.rs  lib.rs  subject.rs  template.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs  units.rs
crates/lattice-diagnosis/: Cargo.toml
crates/lattice-diagnosis/src/: lib.rs
crates/lattice-graph/: Cargo.toml
crates/lattice-graph/src/: lib.rs  mastery.rs
crates/lattice-import/: Cargo.toml
crates/lattice-import/src/: lesson.rs  lib.rs  pipeline.rs  source.rs  tag.rs  verify.rs
crates/lattice-llm/: Cargo.toml
crates/lattice-llm/src/: lib.rs
crates/lattice-service/: Cargo.toml
crates/lattice-service/src/: lib.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage/src/: lib.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Lesson.svelte  Math.svelte  api.js
src/routes/: +layout.svelte  +layout.ts  +page.svelte
subjects/chemistry/: concepts.json  problems.json
subjects/chemistry/notes/: balancing_equations.md  chemical_formulas.md  molar_mass.md  moles.md
subjects/math/: concepts.json  problems.json  templates.json
subjects/math/notes/: algebraic_manipulation.md  arithmetic.md  bayes_theorem.md  chain_rule.md  conditional_probability.md  critical_points.md  derivatives.md  dot_product.md  expectation.md  exponent_rules.md  exponential_derivative.md  factoring.md  functions.md  gradient_descent.md  gradients.md  limits.md  log_derivative.md  matrices.md  matrix_multiplication.md  matrix_vector_product.md  maximum_likelihood.md  optimization.md  partial_derivatives.md  power_rule.md  probability_basics.md  product_rule.md  random_variables.md  second_derivative.md  variance.md  vector_operations.md  vectors.md
subjects/physics/: concepts.json  problems.json  templates.json
subjects/physics/notes/: acceleration.md  kinematics_equations.md  newtons_second_law.md  units_dimensions.md  velocity.md  weight.md
