[package]
name = "lattice-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Domain types for Lattice. Pure data, no I/O (spec §5)."

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
