[package]
name = "lattice-diagnosis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AI misconception diagnosis (Phase 2) — spec §2.4, §7."

[dependencies]
lattice-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
