[package]
name = "lattice-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Deterministic concept-graph diagnosis engine. No AI (spec §2.1, §5)."

[dependencies]
lattice-core = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
# Only for generating synthetic data in the BKT parameter-recovery test.
rand = { workspace = true }
