[package]
name = "lattice-import"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Content import pipeline (spec §10): ingest existing problems, structure/tag them against the concept graph, verify, and record provenance."

[dependencies]
lattice-core = { workspace = true }
lattice-content = { workspace = true }
lattice-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Only the `import` binary needs a runtime; the library is plain async.
tokio = { workspace = true }

[[bin]]
name = "lattice-import"
path = "src/bin/import.rs"
