[package]
name = "lattice-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared BYOK LLM client (Anthropic/OpenAI/Gemini) over raw REST — no Rust SDK exists."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
