[package]
name = "lattice-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Transport-agnostic orchestration over the domain crates (spec §5, §9)."

[dependencies]
lattice-core = { workspace = true }
lattice-content = { workspace = true }
lattice-graph = { workspace = true }
lattice-storage = { workspace = true }
lattice-diagnosis = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
