[package]
name = "lattice-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Persistence: a Storage trait + a SQLite implementation (spec §5, §9)."

[dependencies]
lattice-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
